discussion/kv_engine/177003/177003_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] rename serverless_test to metering_test

Change-Id: I79828a48fd181e89033a7fe1227b31f2071b9f45

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:19.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47307/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47307/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39759/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39759/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8218/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8218/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8317/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20431/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20431/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20779/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20779/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21419/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21419/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28812/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28812/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19653/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19653/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18547/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18547/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13:
error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18547/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17698/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
